# ai_agent

./: .env.example  .gitignore  Makefile  README.md  etheratrading.md  middleware.ts  next.config.js  package-lock.json  package.json  pyproject.toml  requirements.txt  tsconfig.json  vercel.json
.github/workflows/: backfill.yml  ci.yml  compute-signals.yml  daily-digest.yml  daily.yml  execute-approved.yml  init_db.yml  macro-regime.yml  reconcile.yml  shadow-mtm.yml  signal-backtests.yml  signals_check.yml  signals_ingest.yml
api/: requirements.txt  telegram_webhook.py
app/: icon.tsx  layout.tsx  manifest.ts  page.tsx
app/analysis/: AnalysisClient.tsx  page.tsx
app/api/analysis/: route.ts
app/api/llm-usage/: route.ts
app/api/macro-regime/: route.ts
app/api/portfolio/: route.ts
app/api/reconciliation/: route.ts
app/api/shadow/: route.ts
app/api/simulator/: route.ts
app/api/sync/: route.ts
app/api/watchlist/: route.ts
app/auth/magic/: route.ts
app/buzz/: page.tsx
app/components/: InstallPrompt.tsx  Nav.tsx  PushSubscribeButton.tsx  RegisterServiceWorker.tsx  RiskBadge.tsx  StatusPill.tsx
app/connections/: ConnectionsClient.tsx  page.tsx
app/insiders/: page.tsx
app/ipos/: page.tsx
app/leaders/: page.tsx
app/llm-usage/: DailyCostChart.tsx  UsageClient.tsx  page.tsx
app/login/: page.tsx
app/orders/: page.tsx
app/portfolio/: PortfolioClient.tsx  page.tsx
app/proposals/: MobileProposalCard.tsx  page.tsx
app/proposals/[id]/: ApprovalActions.tsx  page.tsx
app/reconciliation/: ReconciliationClient.tsx  page.tsx
app/regime/: RegimeClient.tsx  page.tsx
app/shadow/: page.tsx
app/signals/: SignalsClient.tsx  page.tsx
app/simulator/: SimulatorChart.tsx  SimulatorClient.tsx  page.tsx
app/watchlist/: WatchlistClient.tsx  page.tsx
branding/: README.md  colors.json
config/: external_signals.yaml  watchlist.example.yml  watchlist.yaml
docs/: configuration.md  spec.md
lib/: auth.ts  buzz.ts  db.ts  env.ts  indicators.ts  insiders.ts  ipos.ts  proposal-actions.ts  queries.ts  reddit.ts  signals-bootstrap.ts  thirteenf.ts  watchlist-bootstrap.ts
public/: sw.js
reports/: a1-backtest.md
scripts/: auth_telegram.py  backfill_watchlist.py  backtest_signal.py  check_signals.py  compute_signals.py  daily_digest.py  execute_approved_proposals.py  expire_stuck_approvals.py  generate-icons.mjs  generate-splash.mjs  generate_vapid_keys.py  macro_regime.py  reconcile.py  run_a1_backtest.py  run_all_backtests.py  run_watchlist_backtest.py  seed_watchlist.py  shadow_mtm.py  tilt_snapshot.py
src/ai_agent/: logging.py  reconciliation.py  settings.py  watchlist.py
src/ai_agent/agent/: __init__.py  cost.py  prompts.py  proposals.py  runner.py  screening.py  tools.py
src/ai_agent/backtest/: __init__.py  engine.py  llm_strategy.py  metrics.py  replay.py  report.py  spy_tilt.py  strategy.py
tests/: conftest.py  test_db_models.py  test_m16_reasoning_shadow.py  test_reconciliation.py  test_settings.py  test_watchlist.py
tests/agent/: test_proposals.py  test_runner.py  test_tiered_routing.py  test_tools.py
tests/backtest/: test_engine.py  test_llm_strategy.py  test_metrics.py  test_replay.py  test_report.py  test_spy_tilt.py  test_strategy.py
tests/bot/: test_formatting.py  test_handlers.py  test_magic_link.py
tests/broker/: test_execute_approved.py  test_fx.py  test_order_executor.py  test_t212_client.py
tests/data/: test_base.py  test_edgar_source.py  test_finnhub_source.py  test_fred_source.py  test_registry.py  test_stooq_source.py  test_thirteenf.py  test_yahoo_chart_source.py  test_yfinance_source.py
tests/db/: test_push_store.py  test_seed_watchlist.py  test_settings_store.py  test_watchlist_store.py
tests/digest/: test_daily_digest.py  test_push_sender.py
tests/exposure/: test_job.py  test_tilt.py
tests/external_signals/: test_ingest.py  test_models.py  test_parser.py  test_store.py
tests/features/: test_indicators.py  test_pipeline.py  test_regime.py
tests/feedback/: test_calibration.py
tests/loop/: test_bar_store.py  test_daily_loop_smoke.py  test_order_executor.py  test_portfolio_snapshot.py  test_tiered_daily_loop.py
tests/macro/: test_regime_detector.py
tests/risk/: test_rails.py  test_scoring.py
tests/signals/: test_analyst_revisions.py  test_composite.py  test_insider_buying.py  test_pead.py  test_reference.py  test_runner.py  test_sector_rs.py  test_short_interest.py  test_snapshot_job.py  test_strategy_adapter.py
(+80 files in other folders)
