[project]
name = "ai_agent"
version = "0.1.0"
description = "Daily-loop AI trading agent for US equities. Telegram-approved orders via Trading 212."
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }
authors = [{ name = "bonniciron-rgb" }]

dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "sqlmodel>=0.0.22",
    "psycopg[binary]>=3.2",
    "httpx>=0.27",
    "structlog>=24.4",
    "pyyaml>=6.0",
    "python-dateutil>=2.9",
    "tenacity>=9.0",
]

[project.optional-dependencies]
data = [
    "yfinance>=0.2.50",
    "finnhub-python>=2.4",
    "fredapi>=0.5",
    "sec-edgar-api>=1.1",
]
features = [
    "pandas>=2.2",
    "numpy>=1.26",
    "pandas-ta>=0.3.14b0",
]
backtest = [
    "vectorbt>=0.26",
]
agent = [
    "anthropic>=0.40",
]
bot = [
    "python-telegram-bot[webhooks]>=21.6",
]
broker = [
    "httpx>=0.27",
]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "types-PyYAML",
    "types-python-dateutil",
    "pandas>=2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_agent"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle, pyflakes
    "I",             # isort
    "B",             # flake8-bugbear
    "UP",            # pyupgrade
    "RUF",           # ruff-specific
    "SIM",           # flake8-simplify
    "C4",            # flake8-comprehensions
]
ignore = [
    "E501",   # line length handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"
asyncio_mode = "auto"
markers = [
    "integration: tests that hit external services (skipped by default)",
]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
files = ["src"]
